# pyaiomongo

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.dev.txt
.github/workflows/: test-python.yml
src/pyaiomongo/core/: client.py  types.py
