[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "Yannik Lubas", email = "yannik.lubas@gmail.com"},
]
dependencies = [
  "pymongo",
]
description = "PyAIOMongo is a native asyncio mongo driver for python."
name = "pyaiomongo"
readme = "Readme.md"
requires-python = ">=3.10"
version = "0.0.1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pyright]
venv = "venv"
venvPath = "."
